# starlight

./: .gitignore  Doxyfile.in  README.md  build.py  clean.py  meson.build
src/: main.cpp
src/core/: config.cpp  config.hpp  device.cpp  device.hpp  version.hpp  window.cpp  window.hpp
src/graphics/: window.cpp  window.hpp
